fix surname typo

--- a/docs/_data/settings.yml
+++ b/docs/_data/settings.yml
@@ -10,7 +10,7 @@ description: Matt Goldman's blog about tech and life
 author:
   name: Matt Goldman
   image: mattg.png
-  say-hello: Hello, I’m <strong>Matt goldman</strong>
+  say-hello: Hello, I’m <strong>Matt Goldman</strong>
   bio: Senior Software Architect at SSW. I love innovation and write about it here. 
 
 
