changed disqus username

--- a/docs/_data/settings.yml
+++ b/docs/_data/settings.yml
@@ -27,7 +27,7 @@ github: https://github.com/matt-goldman/
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: goforgoldman # add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
