--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,9 +16,7 @@
 title: Go For Goldman
 email: matt@goforgoldman.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Matt Goldman shares thoughts about tech, innovation, and the world.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://goforgoldman.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: mattgoldman
@@ -30,6 +28,7 @@ remote-theme: artemsheludko/zolan
 plugins:
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-gist
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
