--- a/docs/_data/settings.yml
+++ b/docs/_data/settings.yml
@@ -27,13 +27,13 @@ github: https://github.com/matt-goldman/
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: goforgoldman # add your shortname for Disqus Comment. For example mr-brown
+#disqus-identifier: goforgoldman # add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
 # Instagram Feed
 instafeed: false # To enable the instafeed, use the value true. To turn off use the value false.
-instagram-profile: artemsheludko_ # Add instagram username
+#instagram-profile: artemsheludko_ # Add instagram username
 
 
 #-------------------------------
