tweak title and about page

--- a/docs/_data/settings.yml
+++ b/docs/_data/settings.yml
@@ -11,7 +11,7 @@ author:
   name: Matt Goldman
   image: mattg.png
   say-hello: Hi, I’m <strong>Matt Goldman</strong>
-  bio: Senior Software Architect at SSW. I love innovation and write about it here. 
+  bio: Solution Architect at SSW. I love innovation and write about it here. 
 
 
 #-------------------------------
