--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,3 +1,20 @@
+# hidden files
+.*
+!.git*
+!.editorconfig
+!.nojekyll
+!.husky
+!.commitlintrc.json
+!.versionrc.json
+!.stylelintrc.json
+
+# bundler cache
 _site
-.sass-cache
-.jekyll-metadata
+vendor
+
+# rubygem
+*.gem
+
+# npm dependencies
+node_modules
+package-lock.json
