--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
+# hidden files
+.*
+!.git*
+!.editorconfig
+!.nojekyll
+!.husky
+!.commitlintrc.json
+!.versionrc.json
+!.stylelintrc.json
+
+# bundler cache
+_site
+vendor
+
+# rubygem
+*.gem
+
+# npm dependencies
+node_modules
+package-lock.json
