--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ avatar: /images/mattg.png
 toc: true
 
 comments:
-  active:         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: utterances        # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   # disqus:
   #   shortname:    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -96,15 +96,15 @@ comments:
     repo:         matt-goldman/matt-goldman.github.io
     issue_term:   pathname
   # Giscus options › https://giscus.app
-  giscus:
-    repo:              # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping:           # optional, default to 'pathname'
-    input_position:    # optional, default to 'bottom'
-    lang:              # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+  # giscus:
+  #   repo:              # <gh-username>/<repo>
+  #   repo_id:
+  #   category:
+  #   category_id:
+  #   mapping:           # optional, default to 'pathname'
+  #   input_position:    # optional, default to 'bottom'
+  #   lang:              # optional, default to the value of `site.lang`
+  #   reactions_enabled: # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
