Switched comments to giscus

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ avatar: /images/mattg.png
 toc: true
 
 comments:
-  active: utterances        # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: giscus        # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   # disqus:
   #   shortname:    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -96,11 +96,11 @@ comments:
     repo:         matt-goldman/matt-goldman.github.io
     issue_term:   pathname
   # Giscus options › https://giscus.app
-  # giscus:
-  #   repo:              # <gh-username>/<repo>
-  #   repo_id:
-  #   category:
-  #   category_id:
+  giscus:
+    repo:         matt-goldman/matt-goldman.github.io
+    repo_id:      MDEwOlJlcG9zaXRvcnkzMzQ1ODM1NDQ=
+    category:     General
+    category_id:  DIC_kwDOE_FW-M4Cgnmw
   #   mapping:           # optional, default to 'pathname'
   #   input_position:    # optional, default to 'bottom'
   #   lang:              # optional, default to the value of `site.lang`
