--- a/contact.yml
+++ b/contact.yml
@@ -3,11 +3,11 @@
 -
   type: github
   icon: 'fab fa-github'
-  url:  'https://github.com/matt-goldman/'   
+  url:  'https://github.com/matt-goldman/'
 -
-  type: twitter
-  icon: 'fab fa-twitter'
-  url:  'https://twitter.com/mattgoldman'   
+  type: bluesky
+  icon: 'fab fa-bluesky'
+  url:  'https://bsky.app/profile/mattgoldman.bsky.social'
 -
 #   type: email
 #   icon: 'fas fa-envelope'
@@ -30,3 +30,7 @@
 #   type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
 #   url:  ''                  # Fill with your stackoverflow homepage
+-
+  type: youtube
+  icon: 'fab fa-youtube'
+  url:  'https://youtube.com/@goforgoldman'
