--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,7 @@ kramdown:
       line_numbers: true
       start_line: 1
   parse_block_html: true
+  math_engine: mathjax
 
 collections:
   tabs:
