feat: Add npm install target and update project dependencies
feat: Update NavMenu with logo and outline-hidden class for accessibility

docs: Update README with new tasks for mobile responsiveness and image optimization

feat: Extend TagToColor utility with new tags for mobile and UI

fix: Correct package-lock.json name to match project

style: Add custom margin and height utilities in tailwind.css

chore: Update feed.xml with new posts and remove outdated entries

--- a/GoForGoldman.csproj
+++ b/GoForGoldman.csproj
@@ -18,6 +18,9 @@
   <Target Name="EnsureNodeModules" BeforeTargets="Build">
     <Exec Command="npm ci" Condition="!Exists('node_modules')" />
   </Target>
+  <Target Name="NpmInstall" BeforeTargets="BuildTailwind">
+    <Exec Command="npm install" />
+  </Target>
   <Target Name="BuildTailwind" BeforeTargets="Publish">
     <Exec Command="npm run build:css" />
   </Target>
