--- a/GoForGoldman.csproj
+++ b/GoForGoldman.csproj
@@ -7,13 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BlakePlugin.OpenGraph" Version="1.0.0" />
     <PackageReference Include="BlakePlugin.RSS" Version="1.0.3" />
     <PackageReference Include="Blazicons.Bootstrap" Version="2.3.40" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.6" PrivateAssets="all" />
     <PackageReference Include="Blake.Types" Version="1.0.18" />
+  </ItemGroup>
 
+  <ItemGroup Condition="'$(Configuration)' == 'Release'">
+    <PackageReference Include="BlakePlugin.OpenGraph" Version="*" />
   </ItemGroup>
 
   <Target Name="EnsureNodeModules" BeforeTargets="Build">
