--- a/GoForGoldman.csproj
+++ b/GoForGoldman.csproj
@@ -10,13 +10,13 @@
     <PackageReference Include="BlakePlugin.ReadTime" Version="1.0.1" />
     <PackageReference Include="BlakePlugin.RSS" Version="1.0.6" />
     <PackageReference Include="Blazicons.Bootstrap" Version="2.3.40" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.6" PrivateAssets="all" />
-    <PackageReference Include="Blake.Types" Version="1.0.18" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.8" PrivateAssets="all" />
+    <PackageReference Include="Blake.Types" Version="1.0.20" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageReference Include="BlakePlugin.OpenGraph" Version="*" />
+    <PackageReference Include="BlakePlugin.OpenGraph" Version="1.0.0" />
   </ItemGroup>
 
   <Target Name="EnsureNodeModules" BeforeTargets="Build">
