--- a/GoForGoldman.csproj
+++ b/GoForGoldman.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.8" PrivateAssets="all" />
     <PackageReference Include="Blake.Types" Version="1.0.20" />
-    <PackageReference Include="BlakePlugin.OpenGraph" Version="1.0.0" />
+    <PackageReference Include="BlakePlugin.OpenGraph" Version="1.0.0" Condition="'$(Configuration)' == 'Release'" />
   </ItemGroup>
 
   <Target Name="EnsureNodeModules" BeforeTargets="Build">
